Mantis

03.XX.2002  -   0.17.2

 * Fixed error in set_project where setting a project would result in a loop.
 * Modified accounts so that protected accounts are not accessible by the user.

03.15.2002  -   0.17.1

 * Fixed missing closing span tag in view_bug_*page.php.
 * Fixed advanced summaries (jpgraph) for general statistics for all projects.
 * Fixed small problem in all localization files (for $s_reset_request_msg).
 * Fixed summary stats for developers when they are assigned with "developer" rights at a project and do not have default profile >="developer".
 * Fixed reporter poplist filter in buglist when users are assigned >="reporter" at a project and do not have default profile >="reporter".
 * Fixed summary page for "All projects" option
 * Fixed printable buglist for "All projects" option
 * Fixed document links (ChangeLog, README, etc.)
 * Fixed problem where portuguese_brazil localization did not appear correctly.
 * Fixed several minor CSS class consistency issues.
 * Fixed file download links to use rawurlencode().
 * Fixed admin_check.php to check for Windows style \.
 * Fixed file dates to display correctly.
 * Fixed bug update button to go to proper simple or advanced page.
 * Fixed a problem where users could not report bugs if uploading was disabled.
 * Fixed a minor problem in the print_reporters_option_list().
 * Fixed more CSS issues.
 * Fixed file uploads to not allow duplicate files when using DISK.
 * Fixed file upload switch with break statements.
 * Fixed print_assign_to_option_list() to accurately reflect settings.
 * Fixed print_reporter_option_list() to accurately reflect settings.
 * Fixed the access level checks to be more accurate.
 * Fixed summary by category to work when categories have single quotes.
 * Removed site_settings link in print_manage_doc_menu().
 * Renamed doc/CONFIGURATION to doc/CUSTOMIZATION.
 * Modified edit user links to use the username instead of the [edit] link.