@@ -21,23 +21,38 @@
 		print_mantis_error( ERROR_PROTECTED_ACCOUNT );
 	}
 
-	# " character poses problem when editting so let's just convert them
-	$f_platform		= string_prepare_text( $f_platform );
-	$f_os			= string_prepare_text( $f_os );
-	$f_os_build		= string_prepare_text( $f_os_build );
-	$f_description	= string_prepare_textarea( $f_description );
+	# validating input
+	$check_failed = false;
+	if ( ( empty( $f_platform ) ) ||
+		 ( empty( $f_os ) ) ||
+		 ( empty( $f_os_build ) ) ||
+		 ( empty( $f_description ) ) ) {
+		$check_failed = true;
+	}
 
-	# get user id
-	$t_user_id = get_current_user_field( "id" );
+	if ( $check_failed ) {
+		print_mantis_error( ERROR_EMPTY_FIELD );
+	}
 
-	# Add profile
-	$query = "INSERT
-			INTO $g_mantis_user_profile_table
-    		( id, user_id, platform, os, os_build, description )
-			VALUES
-			( null, '$t_user_id', '$f_platform', '$f_os', '$f_os_build', '$f_description' )";
-    $result = db_query( $query );
+	# required fields ok, proceeding
+	if ( !$check_failed ) {
+		# " character poses problem when editting so let's just convert them
+		$f_platform		= string_prepare_text( $f_platform );
+		$f_os			= string_prepare_text( $f_os );
+		$f_os_build		= string_prepare_text( $f_os_build );
+		$f_description	= string_prepare_textarea( $f_description );
 
+		# get user id
+		$t_user_id = get_current_user_field( "id" );
+
+		# Add profile
+		$query = "INSERT
+				INTO $g_mantis_user_profile_table
+	    		( id, user_id, platform, os, os_build, description )
+				VALUES
+				( null, '$t_user_id', '$f_platform', '$f_os', '$f_os_build', '$f_description' )";
+	    $result = db_query( $query );
+	}
     $t_redirect_url = $g_account_profile_menu_page;
 ?>
 <?php print_page_top1() ?>
