@@ -4,6 +4,7 @@ Mantis
 
  * Fixed error in set_project where setting a project would result in a loop.
  * Modified accounts so that protected accounts are not accessible by the user.
+ * Fixed account profiles to check for blank inputs.
 
 03.15.2002  -   0.17.1
 
